[gd_scene load_steps=6 format=3 uid="uid://dubm3sqga7eku"]

[ext_resource type="Script" path="res://Scripts/GameAssets/Menu/pauseMenu.gd" id="1_bfbrw"]
[ext_resource type="FontFile" uid="uid://d4kb6nf34gjix" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="1_wxyfu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcxyw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lqi74"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52elu"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[node name="pauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bfbrw")

[node name="bg" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -155.0
offset_right = 222.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tcxyw")

[node name="PauseText" type="Label" parent="bg"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.0
offset_top = 19.0
offset_right = 155.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_wxyfu")
theme_override_font_sizes/font_size = 31
text = "-PAUSED-"
horizontal_alignment = 1

[node name="Options" type="VBoxContainer" parent="bg"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.5
offset_top = -213.0
offset_right = 114.5
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1

[node name="Resume" type="Button" parent="bg/Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_wxyfu")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_lqi74")
theme_override_styles/hover = SubResource("StyleBoxFlat_52elu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_52elu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lqi74")
theme_override_styles/focus = SubResource("StyleBoxFlat_52elu")
text = "Resume"

[node name="MainMenu" type="Button" parent="bg/Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_wxyfu")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_lqi74")
theme_override_styles/hover = SubResource("StyleBoxFlat_52elu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_52elu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lqi74")
theme_override_styles/focus = SubResource("StyleBoxFlat_52elu")
text = "Main Menu"

[node name="Overworld" type="Button" parent="bg/Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_wxyfu")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_lqi74")
theme_override_styles/hover = SubResource("StyleBoxFlat_52elu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_52elu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lqi74")
theme_override_styles/focus = SubResource("StyleBoxFlat_52elu")
text = "Overworld"

[node name="Exit" type="Button" parent="bg/Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_wxyfu")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_lqi74")
theme_override_styles/hover = SubResource("StyleBoxFlat_52elu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_52elu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lqi74")
theme_override_styles/focus = SubResource("StyleBoxFlat_52elu")
text = "Exit"

[connection signal="button_down" from="bg/Options/Resume" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="bg/Options/Resume" to="." method="_on_mouse_entered" binds= [0]]
[connection signal="button_down" from="bg/Options/MainMenu" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="bg/Options/MainMenu" to="." method="_on_mouse_entered" binds= [1]]
[connection signal="button_down" from="bg/Options/Overworld" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="bg/Options/Overworld" to="." method="_on_mouse_entered"]
[connection signal="button_down" from="bg/Options/Exit" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="bg/Options/Exit" to="." method="_on_mouse_entered" binds= [2]]
